--- a/toolkit/governed-map/primitives/Cargo.toml
+++ b/toolkit/governed-map/primitives/Cargo.toml
@@ -15,24 +15,37 @@ targets = ["x86_64-unknown-linux-gnu"]
 workspace = true
 
 [dependencies]
+async-trait = { workspace = true, optional = true }
+log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
-sidechain-domain = { workspace = true }
-sp-inherents = { workspace = true }
-thiserror = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
+sidechain-domain = { workspace = true }
+sp-api = { workspace = true }
+sp-inherents = { workspace = true }
+sp-runtime = { workspace = true, optional = true }
+thiserror = { workspace = true, optional = true }
+
+[dev-dependencies]
+tokio = { workspace = true }
 
 [features]
 default = ["std"]
 std = [
+    "async-trait",
+    "log/std",
     "scale-info/std",
-    "sidechain-domain/std",
-    "sp-inherents/std",
-    "thiserror",
     "serde",
+    "sidechain-domain/std",
+    "sp-api/std",
+    "sp-inherents/std",
+    "sp-runtime",
+    "sp-runtime/std",
+    "thiserror",
 ]
 serde = [
 	"dep:serde",
 	"scale-info/serde",
 	"sidechain-domain/serde",
 ]
+mock = []
